--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <a class="active" href="index.html">Home</a>
             <a href="project.html">Project</a>
             <a href="contact.html">Contact</a>
+            <a href="Resume.html">Resume</a>
         </div>
 
     </nav>
@@ -45,6 +46,7 @@
         <img src="res/exp.jpg" alt="image" width="100" height="100"></section>
 
     </section>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
