--- a/project.html
+++ b/project.html
@@ -20,6 +20,7 @@
         <a href="index.html">Home</a>
         <a class="active" href="project.html">Project</a>
         <a href="contact.html">Contact</a>
+        <a href="Resume.html">Resume</a>
       </div>
     </nav>
 
